// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge: should render Bold Declined 1`] = `
<span
  className="badge boldDeclined bold"
>
  Declined
</span>
`;

exports[`Badge: should render Bold Default 1`] = `
<span
  className="badge boldDefault bold"
>
  default
</span>
`;

exports[`Badge: should render Bold Expired 1`] = `
<span
  className="badge boldExpired bold"
>
  Expired
</span>
`;

exports[`Badge: should render Bold New 1`] = `
<span
  className="badge boldNew bold"
>
  New
</span>
`;

exports[`Badge: should render Bold Progressing 1`] = `
<span
  className="badge boldProgressing bold"
>
  Progressing
</span>
`;

exports[`Badge: should render Subtle Declined 1`] = `
<span
  className="badge subtleDeclined subtle"
>
  Declined
</span>
`;

exports[`Badge: should render Subtle Default 1`] = `
<span
  className="badge subtleDefault subtle"
>
  default
</span>
`;

exports[`Badge: should render Subtle Expired 1`] = `
<span
  className="badge subtleExpired subtle"
>
  Expired
</span>
`;

exports[`Badge: should render Subtle New 1`] = `
<span
  className="badge subtleNew subtle"
>
  New
</span>
`;

exports[`Badge: should render Subtle Progressing 1`] = `
<span
  className="badge subtleProgressing subtle"
>
  Progressing
</span>
`;
